fix: Solucionar errores de despliegue en Vercel - Excluir archivos de Hardhat del build - Separar providers de Web3 para carga dinámica - Corregir tipos en ProtocolStats - Agregar configuraciones específicas para Vercel

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint-config-next": "^14.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "ignore-loader": "^0.1.2",
     "prettier": "^3.0.0",
     "typescript": "^5.0.0"
   },
